// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders a button 1`] = `
.sxyl5fn {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-2);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxyl5fn {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sxyl5fn {
  white-space: nowrap;
  width: max-content;
}

.sxyl5fn[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxyl5fngmarq--comp {
  background-color: var(--colors-primary500);
  color: white;
}

.sxyl5fngmarq--comp:not([disabled]):hover,
.sxyl5fngmarq--comp:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxyl5fngmarq--comp:active {
  background-color: var(--colors-primary500);
}

.sxyl5fngmarq--comp[disabled] {
  background-color: var(--colors-tonal400);
  color: var(--colors-tonal700);
}

<div>
  <button
    class="sxyl5fn sxyl5fngmarq--comp sxyl5fn03kze--theme-primary sxyl5fn03kze--appearance-solid"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a disabled button 1`] = `
.sxyl5fn {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-2);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxyl5fn {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sxyl5fn {
  white-space: nowrap;
  width: max-content;
}

.sxyl5fn[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxyl5fngmarq--comp {
  background-color: var(--colors-primary500);
  color: white;
}

.sxyl5fngmarq--comp:not([disabled]):hover,
.sxyl5fngmarq--comp:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxyl5fngmarq--comp:active {
  background-color: var(--colors-primary500);
}

.sxyl5fngmarq--comp[disabled] {
  background-color: var(--colors-tonal400);
  color: var(--colors-tonal700);
}

.sxyl5fn6pykn--comp {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxyl5fn6pykn--comp:not([disabled]):hover,
.sxyl5fn6pykn--comp:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxyl5fn6pykn--comp:active {
  color: var(--colors-primary500);
}

.sxyl5fn6pykn--comp[disabled] {
  background-color: white;
  color: var(--colors-tonal700);
}

<div>
  <button
    class="sxyl5fn sxyl5fngmarq--comp sxyl5fn03kze--theme-primary sxyl5fn03kze--appearance-solid"
    disabled=""
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a disabled secondary outline button 1`] = `
.sxyl5fn {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-2);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxyl5fn {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sxyl5fn {
  white-space: nowrap;
  width: max-content;
}

.sxyl5fn[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxyl5fngmarq--comp {
  background-color: var(--colors-primary500);
  color: white;
}

.sxyl5fngmarq--comp:not([disabled]):hover,
.sxyl5fngmarq--comp:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxyl5fngmarq--comp:active {
  background-color: var(--colors-primary500);
}

.sxyl5fngmarq--comp[disabled] {
  background-color: var(--colors-tonal400);
  color: var(--colors-tonal700);
}

.sxyl5fn6pykn--comp {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxyl5fn6pykn--comp:not([disabled]):hover,
.sxyl5fn6pykn--comp:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxyl5fn6pykn--comp:active {
  color: var(--colors-primary500);
}

.sxyl5fn6pykn--comp[disabled] {
  background-color: white;
  color: var(--colors-tonal700);
}

.sxyl5fn056ve--comp {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-secondary500);
  background-color: white;
}

.sxyl5fn056ve--comp:not([disabled]):hover,
.sxyl5fn056ve--comp:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-secondary900);
  background-color: white;
}

.sxyl5fn056ve--comp:active {
  color: var(--colors-secondary500);
}

.sxyl5fn056ve--comp[disabled] {
  background-color: white;
  color: var(--colors-tonal700);
}

<div>
  <button
    class="sxyl5fn sxyl5fn056ve--comp sxyl5fn03kze--theme-secondary sxyl5fn03kze--appearance-outline"
    disabled=""
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a outline button 1`] = `
.sxyl5fn {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-2);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxyl5fn {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sxyl5fn {
  white-space: nowrap;
  width: max-content;
}

.sxyl5fn[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxyl5fngmarq--comp {
  background-color: var(--colors-primary500);
  color: white;
}

.sxyl5fngmarq--comp:not([disabled]):hover,
.sxyl5fngmarq--comp:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxyl5fngmarq--comp:active {
  background-color: var(--colors-primary500);
}

.sxyl5fngmarq--comp[disabled] {
  background-color: var(--colors-tonal400);
  color: var(--colors-tonal700);
}

.sxyl5fn6pykn--comp {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxyl5fn6pykn--comp:not([disabled]):hover,
.sxyl5fn6pykn--comp:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxyl5fn6pykn--comp:active {
  color: var(--colors-primary500);
}

.sxyl5fn6pykn--comp[disabled] {
  background-color: white;
  color: var(--colors-tonal700);
}

<div>
  <button
    class="sxyl5fn sxyl5fn6pykn--comp sxyl5fn03kze--theme-primary sxyl5fn03kze--appearance-outline"
  >
    BUTTON
  </button>
</div>
`;
